# zentao-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TECHNICAL_SOLUTION.md  go.mod  go.sum
docs/: TESTING.md
internal/api/: api.go  api_test.go
internal/browser/: browser.go  browser_test.go
internal/bug/: bug.go  bug_test.go
internal/bug/testdata/bug_html/: bug_48919_real.html  bug_51267_real.html  bug_missing_desc.html  bug_missing_title.html
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
scripts/: zentao-login-verify.mjs
skills/zentao/: SKILL.md
src/: api.rs  api_test.rs  browser.rs  browser_test.rs  bug.rs  bug_test.rs  cli.rs  cli_test.rs  config.rs  config_test.rs  cookie_store.rs  main.rs  search.rs  search_test.rs
tests/fixtures/bug/: bug_48433_real.html
tests/fixtures/search/: search_assigned_to_zhousong.html  search_empty_result.html
