[package]
name = "zentao-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
md5 = "0.7"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
scraper = "0.24"
html2md = "0.2"
regex = "1.12"
